--- a/views/signup_login.ejs
+++ b/views/signup_login.ejs
@@ -1,6 +1,7 @@
 <% include partial/navbar.ejs %>
 
-<div class="container text-center">
+<div style="padding:0% 40%">
+  <div class="container text-center">
     <form class="form-signin" action="/users" method="POST">
 
       <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
@@ -8,20 +9,23 @@
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
         <label for="inputName" class="sr-only">your name</label>
         <input type="text" name="name" id="inputName" class="form-control" placeholder="your name" required="">
+        <label for="inputPassword" class="sr-only">your password</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="your password" required="">
 
         <button class="btn btn-lg btn-primary btn-block" type="submit" >Sign up</button>
 </form>
 </div>
 
 <div class="container text-center">
-    <form class="form-signin" action="/profile" method="POST">
+    <form class="form-signin" action="/home" method="POST">
 
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-        <label for="inputName" class="sr-only">your name</label>
-        <input type="text" name="name" id="inputName" class="form-control" placeholder="your name" required="">
+        <label for="inputPassword" class="sr-only">your password</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="your password" required="">
 
         <button class="btn btn-lg btn-primary btn-block" type="submit" >Sign in</button>
 </form>
+</div>
 </div>
