--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,2 +1,32 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-<!-- <h1>welcome to our project</h1> -->
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding:1%">
+<div class="container">
+            
+                <a class="navbar-brand" href="/home">SNA PROJECT</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                      <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/all_users">Users</a>
+                    </li>
+        
+                    <li class="nav-item">
+                            <a class="nav-link" href="/my_friends">My Friends</a>
+                          </li>
+        
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                </div>
+                </div>
+              </nav>
+        
