--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,38 +17,57 @@
             <label for="inputpost" class="sr-only">your post</label>
             <textarea type="text" name="content" id="inputpost" class="form-control" placeholder="write down your post ..." required=""></textarea>
             <br>
-            <button type="submit" class="btn btn-outline-dark " >submit</button>
+            <button type="submit" class="btn btn-outline-dark " >Post</button>
         </form>
         
         <ul style="list-style: none; ">
         <% users.forEach((user)=>{ %>
             <% user.posts.forEach((post)=>{ %>
-            <li         style="text-align:center;    
-            border: 1px solid;
-            border-radius: 21px;
-            padding: 2%;
-            border-color: transparent;
-            margin:2%;
-            background-color:white">
-
-                <div class="row">
-                        <div class="col-8 text-left">
-                                <a href="/user/<%= user._id %>">
-                                    <%= user.name %>
-                                </a>  
-                                <br>
-                               <p> <%= post.content %> </p>
-                        </div>
-                        <div class="col-4">
-                                <form action="/like" method="GET">
-                                    <input type="hidden" name='_id' value=<%= post._id %>>
-                                    <div style="text-align:right">
-                                        <button class="btn btn-outline-primary" type="submit">LIKE  <%= post.likes.length %></button>
-                                    </div>
-                                </form>
-                        </div>
-                </div>
-            </li> 
+                <li         style="text-align:center;    
+                border: 1px solid;
+                border-radius: 21px;
+                padding: 2%;
+                border-color: transparent;
+                margin:2%;
+                background-color:white">
+    
+                    <div class="row">
+                            <div class="col-8 text-left">
+                                <div class="row">
+                                    <div class="col-3">
+                                            <img  class="imgBorder mb-3" height="90" width="90" src="<%= user.pic %>" 
+                                            style="
+                                            height: 100px;
+                                            width: 99px;
+                                            border: 1px solid white;
+                                            border-radius: 176px;
+                                            ">                                            </div>
+                                    <div class="col-9">
+                                        
+                                    <a href="/user/<%= user._id %>">
+                                       <h5> <%= user.name %> </h5>
+                                    </a>  
+                                    <hr>
+                                   <h6> <%= post.content %> </h6>
+                                   <br>
+                                   <p class="text-muted text-left" style="font-size:13px;">posted at:  <%= post.created %> </p>
+                                </div>
+                                   
+                                </div>
+                                
+                            </div>
+                            <div class="col-4">
+                                    <form action="/like" method="GET">
+                                        <input type="hidden" name='_id' value=<%= post._id %>>
+                                        <br><br><br>    
+                                        <div style="text-align:right">
+                                            <button class="btn btn-outline-primary " type="submit"><i class="far fa-thumbs-up"></i>  <%= post.likes.length %></button>
+                                        </div>
+                                    </form>
+                            </div>
+                    </div>
+                </li> 
+            
             <% });  %>
         
         <% });  %>
