--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     }
 </style>
 
+
 <div class="container">
     <br><br>
         <form action="/posts" method="POST" 
@@ -17,11 +18,12 @@
             <label for="inputpost" class="sr-only">your post</label>
             <textarea type="text" name="content" id="inputpost" class="form-control" placeholder="write down your post ..." required=""></textarea>
             <br>
-            <button type="submit" class="btn btn-outline-dark " >Post</button>
+            <button type="submit" class="btn btn-outline-dark " onClick="window.location.reload()" >Post</button>
         </form>
         
         <ul style="list-style: none; ">
         <% users.forEach((user)=>{ %>
+
             <% user.posts.forEach((post)=>{ %>
                 <li         style="text-align:center;    
                 border: 1px solid;
