--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -26,6 +26,9 @@
                             <a class="nav-link" href="/my_friends">My Friends</a>
                           </li>
                           <li class="nav-item" >
+                              <a class="nav-link"  href="/all_groups">Groups</a>
+                            </li>
+                          <li class="nav-item" >
                             <a class="nav-link"  href="/visualize_users">Visualize Users</a>
                           </li>
                           <li class="nav-item" >
