--- a/views/visualization/users.ejs
+++ b/views/visualization/users.ejs
@@ -145,8 +145,8 @@ window.onload = function() {
 
   </head>
   <div>
+<br>   <button class="btn btn-primary btn-lg" id="redraw"  onclick="redraw();">redraw</button>
 
     <div id="canvas"></div>
-    Looks ugly? Hit <button id="redraw" onclick="redraw();">redraw</button>!<br>
     <!--<button onclick="step(-1)">Previous step</button> - <button onclick="step(1)">Next step</button>-->
   </div>
