--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -23,7 +23,7 @@
                     </li>
         
                     <li class="nav-item">
-                            <a class="nav-link" href="/my_friends">My Friends</a>
+                            <a class="nav-link" href="/my_profile">My Profile</a>
                           </li>
                           <li class="nav-item" >
                               <a class="nav-link"  href="/all_groups">Groups</a>
