visualization and statistics

--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -31,6 +31,12 @@
                           <li class="nav-item" >
                             <a class="nav-link"  href="/visualize_users">Visualize Users</a>
                           </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/visualize_users_diaa">Visualize Users_diaa</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/stat">statistics</a>
+                          </li>
                           <li class="nav-item" >
                             <a class="nav-link"  href="/logout">Logout</a>
                           </li>
